Add: Tailwindの導入、確認

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New User</h1>
+<h1 class="text-red-500 text-5xl">欲しいもの登録ページ</h1>
 
 <%= form_with model: @form, url: items_path, local: true do |form| %>
   <%= form.fields_for :items do |f| %>
