--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,5 +4,10 @@
       <span class="ml-3 text-xl">HoshiMe</span>
     </a>
     <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2021 HoshiMe</p>
+    <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+      <%= link_to "利用規約", "#", class: 'text-gray-500' %>｜
+      <%= link_to "プライバシーポリシー", "#", class: 'text-gray-500' %>｜
+      <%= link_to "お問い合わせ", "#", class: 'text-gray-500' %>
+    </span>
   </div>
 </footer>
