--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -4,8 +4,8 @@
       <span class="ml-3 text-xl">HoshiMe</span>
     <% end %>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-      <%= link_to "ログイン", "#", class: 'mr-5 hover:text-gray-900' %>
-      <%= link_to "新規登録", "#", class: 'mr-5 hover:text-gray-900' %>
+      <%= link_to (t 'defaults.login'), "#", class: 'mr-5 hover:text-gray-900' %>
+      <%= link_to (t 'defaults.register'), "#", class: 'mr-5 hover:text-gray-900' %>
     </nav>
   </div>
 </header>
