--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
       <%= link_to "欲しいものリスト", "#", class: 'mr-5 hover:text-gray-900' %>
       <%= link_to "マイページ", "#", class: 'mr-5 hover:text-gray-900' %>
-      <%= link_to "ログアウト", "#", class: 'mr-5 hover:text-gray-900' %>
+      <%= link_to "ログアウト", logout_path, class: 'mr-5 hover:text-gray-900', method: :delete %>
     </nav>
   </div>
 </header>
