--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,4 +2,6 @@
 <% @items.each do |item| %>
   <p>欲しいもの</p>
   <span><%= item.name %></span>
+  <%= link_to "編集", edit_item_path(item) %>
+  <%= link_to "削除", item_path(item), method: :delete , data: {confirm: "削除してもいいですか？"} %>
 <% end %>
