--- a/app/views/three_items/new.html.erb
+++ b/app/views/three_items/new.html.erb
@@ -1,7 +1,8 @@
-<h1 class="text-red-500 text-5xl">欲しいもの登録ページ</h1>
+<h1><%= t('.title') %></h1>
 
 <%= form_with model: @form, url: three_items_path, local: true do |form| %>
   <%= form.fields_for :items do |f| %>
+    <%= render 'shared/error_messages', object: f.object %>
     <%= f.label :name, '欲しいもの' %>
     <%= f.text_field :name %>
     <%= f.label :degree, '欲しい度' %>
