--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,6 +2,10 @@
 <% @items.each do |item| %>
   <p>欲しいもの</p>
   <span><%= item.name %></span>
-  <%= link_to "編集", edit_item_path(item) %>
-  <%= link_to "削除", item_path(item), method: :delete , data: {confirm: "削除してもいいですか？"} %>
+  <%= link_to edit_item_path(item) do %>
+    <i class="fas fa-pen"></i>
+  <% end %>
+  <%= link_to item_path(item), method: :delete, data: {confirm: "削除してもいいですか？"} do %>
+    <i class="fas fa-trash"></i>
+  <% end %>
 <% end %>
