--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,7 @@
 <h1>新規登録ページ</h1>
 <%= form_with model: @user,　local: true do |f| %>
+  <%= render 'shared/error_messages', object: f.object %>
+
   <%= f.label :name, "名前" %>
   <%= f.text_field :name %>
 
