Add: プロフィール編集機能を追加

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,3 +1,4 @@
 <h1><%= t('.title') %></h1>
 <p>名前：<%= current_user.name %></p>
 <p>メールアドレス：<%= current_user.email %></p>
+<%= link_to "編集", edit_profiles_path %>
