--- a/app/views/calculations/_calculation.html.erb
+++ b/app/views/calculations/_calculation.html.erb
@@ -1,3 +1,3 @@
-<span>アイテム名<%= calculation.item.name %></span><br>
+<%= link_to calculation.item.name, calculation_path(calculation) %><br>
 <span>計算値<%= calculation.sum %></span><br>
 <span>=======</span><br>
