--- a/app/views/calculations/_show.html.erb
+++ b/app/views/calculations/_show.html.erb
@@ -1,3 +1,4 @@
+<%= Gon::Base.render_data %>
 <div class="shadow-lg rounded-lg overflow-hidden">
   <canvas class="p-10" id="chartRadar"></canvas>
 </div>
