Fix: パーシャル内の変数をローカル変数に変更

--- a/app/views/calculations/show.js.erb
+++ b/app/views/calculations/show.js.erb
@@ -1,2 +1,4 @@
-$("#modal-area").html("<%= j(render 'show') %>");
+// アイテム名をクリックすると'show'部分テンプレートがHTML要素に追加される
+$("#modal-area").html("<%= j(render 'show', calculation: @calculation) %>");
+// その要素を表示
 $("#modal-area").show();
