--- a/app/views/calculations/_show.html.erb
+++ b/app/views/calculations/_show.html.erb
@@ -1,6 +1,38 @@
 <%= Gon::Base.render_data %>
-<div class="shadow-lg rounded-lg overflow-hidden">
-  <canvas class="p-10" id="chartRadar"></canvas>
+<div class="flex justify-center">
+  <div class='w-3/4 shadow-lg rounded-lg overflow-hidden'>
+    <div class='calculation-item-area'>
+      <table class="table-auto">
+        <thead>
+          <tr>
+            <th>項目</th>
+            <th>値</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>欲しい度</td>
+            <td><%= calculation.item.degree %>%</td>
+          </tr>
+          <tr>
+            <td>いつから欲しい？</td>
+            <td><%= calculation.item.start_date %>日前</td>
+          </tr>
+          <tr>
+            <td>いつまでに欲しい？</td>
+            <td><%= calculation.item.finish_date %>日後</td>
+          </tr>
+          <tr>
+            <td>値段</td>
+            <td><%= calculation.item.price %>円</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class='radar-chart-area'>
+      <canvas class='p-10' id='chartRadar'></canvas>
+    </div>
+  </div>
 </div>
 
 <!-- Chart radar -->
