--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -2,3 +2,5 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+@import 'calculation';
