--- a/app/views/calculations/show.js.erb
+++ b/app/views/calculations/show.js.erb
@@ -1,4 +1,6 @@
 // アイテム名をクリックすると'show'部分テンプレートがHTML要素に追加される
 $("#modal-area").html("<%= j(render 'show', calculation: @calculation) %>");
+// 背景を暗く
+$("div.modal-overlay").addClass('modal-background')
 // その要素を表示
 $("#modal-area").show();
