--- a/app/views/calculations/_show.html.erb
+++ b/app/views/calculations/_show.html.erb
@@ -4,7 +4,7 @@
     <div class='radar-chart-area'>
       <canvas class='' id='chartRadar'></canvas>
     </div>
-    <div class='calculation-item-area flex justify-center'>
+    <div class='calculation-item-area pt-2 flex justify-center'>
       <table class="table-auto">
         <thead>
           <tr>
@@ -32,12 +32,17 @@
         </tbody>
       </table>
     </div>
+    <div class="pt-2 flex justify-center" id="modal-close">
+      <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+        閉じる
+      </button>
+    </div>
   </div>
 </div>
 
 <!-- Chart radar -->
 <script>
-  const dataRadar = {
+  var dataRadar = {
     labels: [
       "欲しい度",
       "いつから欲しい？",
@@ -64,7 +69,7 @@
     ],
   };
 
-  const configRadarChart = {
+  var configRadarChart = {
     type: "radar",
     data: dataRadar,
     options: {
