--- a/app/views/calculations/show.js.erb
+++ b/app/views/calculations/show.js.erb
@@ -1,6 +1,6 @@
 // アイテム名をクリックすると'show'部分テンプレートがHTML要素に追加される
 $("#modal-area").html("<%= j(render 'show', calculation: @calculation) %>");
-// 背景を暗く
+// 背景を暗くする
 $("div.modal-overlay").addClass('modal-background')
 // その要素を表示
 $("#modal-area").show();
@@ -10,4 +10,13 @@ $("#modal-close").on("click", function(){
   $("#modal-area").toggle();
   $("#modal-area").empty();
   $("div.modal-overlay").removeClass('modal-background')
+});
+
+// モーダルウィンドウ以外をクリックした時
+$(document).on('click',function(e) {
+   if(!$(e.target).closest('#modal-area').length) {
+    $("#modal-area").toggle();
+    $("#modal-area").empty();
+    $("div.modal-overlay").removeClass('modal-background')
+   }
 });
