--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,35 @@
-<h1>新規登録ページ</h1>
-<%= form_with model: @user,　local: true do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
+<div class="flex items-center min-h-screen bg-white dark:bg-gray-900">
+  <div class="container mx-auto">
+    <div class="max-w-md mx-auto my-10">
+      <div class="text-center">
+        <h1 class="my-3 text-3xl font-semibold text-gray-700 dark:text-gray-200">新規登録</h1>
+      </div>
+      <div class="m-7">
+        <%= form_with model: @user, local: true do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
+          <div class="mb-6">
+            <%= f.label :name, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
+            <%= f.text_field :name, placeholder: "名前", class: "w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" %>
+          </div>
+          <div class="mb-6">
+            <%= f.label :email, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
+            <%= f.email_field :email, placeholder: "メールアドレス", class: "w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" %>
+          </div>
+          <div class="mb-6">
+            <%= f.label :password, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
+            <%= f.password_field :password, placeholder: "パスワード", class: "w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" %>
+          </div>
+          <div class="mb-6">
+            <%= f.label :password_confirmation, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
+            <%= f.password_field :password_confirmation, placeholder: "パスワード確認", class: "w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" %>
+          </div>
+          <div class="mb-6">
+            <%= f.button :submit, class: "w-full px-3 py-4 text-white bg-indigo-500 rounded-md focus:bg-indigo-600 focus:outline-none" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
 
-  <%= f.label :name, "名前" %>
-  <%= f.text_field :name %>
-
-  <%= f.label :email, "メールアドレス" %>
-  <%= f.email_field :email %>
-
-  <%= f.label :password, "パスワード" %>
-  <%= f.password_field :password %>
-
-  <%= f.label :password_confirmation, "パスワード確認" %>
-  <%= f.password_field :password_confirmation %>
-
-  <%= f.submit "登録する" %>
-<% end %>
+<!-- https://tailwindcomponents.com/component/simple-sign-in -->
