--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,2 +1,2 @@
 <h1>HoshiMe</h1>
-<%= button_to "はじめる", {controller: 'guests', action: 'create'}, {method: :post } %>
+<%= button_to "はじめる", guest_path, method: :post %>
