Fix: 詳細モーダルでレーダーチャートが表示されないバグを修正

--- a/app/views/calculations/_show.html.erb
+++ b/app/views/calculations/_show.html.erb
@@ -1,8 +1,8 @@
 <%= Gon::Base.render_data %>
 <div class="flex justify-center">
-  <div class='p-5 modal-bg w-2/3 shadow-lg rounded-lg overflow-hidden'>
+  <div class='calculation-show p-5 modal-bg w-2/3 shadow-lg rounded-lg overflow-hidden'>
     <div class='radar-chart-area'>
-      <canvas class='' id='chartRadar'></canvas>
+      <canvas id='chartRadar'></canvas>
     </div>
     <div class='calculation-item-area pt-2 flex justify-center'>
       <table class="table-auto">
