--- a/app/views/calculations/index.html.erb
+++ b/app/views/calculations/index.html.erb
@@ -1,7 +1,7 @@
 <h1>ランキング結果</h1>
 
 <div class="shadow-lg rounded-lg overflow-hidden">
-  <canvas class="p-10" id="chartRadar"></canvas>
+  <canvas class="p-10" id="index_chartRadar"></canvas>
 </div>
 
 <div class="modal-overlay"></div>
@@ -10,7 +10,7 @@
 
 <!-- Chart radar -->
 <script>
-  var dataRadar = {
+  const index_dataRadar = {
     labels: [
       "欲しい度",
       "いつから欲しい？",
@@ -69,9 +69,9 @@
     ],
   };
 
-  var configRadarChart = {
+  const index_configRadarChart = {
     type: "radar",
-    data: dataRadar,
+    data: index_dataRadar,
     options: {
       scale: {
         ticks: {
@@ -93,7 +93,7 @@
   };
 
   var chartBar = new Chart(
-    document.getElementById("chartRadar"),
-    configRadarChart
+    document.getElementById("index_chartRadar"),
+    index_configRadarChart
   );
 </script>
