--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,16 +1,39 @@
-<h1>Update Item</h1>
+<div class="flex items-center min-h-screen bg-white dark:bg-gray-900">
+  <div class="container mx-auto">
+    <div class="max-w-md mx-auto my-10">
+      <div class="text-center">
+        <h1 class="my-3 text-3xl font-semibold text-gray-700 dark:text-gray-200"><%= t('.title') %></h1>
+      </div>
+      <div class="m-7">
+        <%= form_with model: @item, local: true do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
+          <div class="mb-6">
+            <%= f.label :name, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
+            <%= f.text_field :name, placeholder: "商品名", class: "w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" %>
+          </div>
+          <div class="mb-6">
+            <%= f.label :degree, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
+            <%= f.range_field :degree, class: "border w-full app border-gray-300 rounded-md focus:outline-none", min:"0", max:"100" %>
+          </div>
+          <div class="mb-6">
+            <%= f.label :start_date, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
+            <%= f.range_field :start_date, class: "border w-full app border-gray-300 rounded-md focus:outline-none", min:"0", max:"180" %>
+          </div>
+          <div class="mb-6">
+            <%= f.label :finish_date, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
+            <%= f.range_field :finish_date, class: "border w-full app border-gray-300 rounded-md focus:outline-none", min:"0", max:"180" %>
+          </div>
+          <div class="mb-6">
+            <%= f.label :price, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
+            <%= f.range_field :price, class: "border w-full app border-gray-300 rounded-md focus:outline-none", min:"0", max:"20000" %>
+          </div>
+          <div class="mb-6">
+            <%= f.button :submit, class: "w-full px-3 py-4 text-white bg-indigo-500 rounded-md focus:bg-indigo-600 focus:outline-none" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
 
-<%= form_with model: @item, local: true do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
-  <%= f.label :name, '欲しいもの' %>
-  <%= f.text_field :name %>
-  <%= f.label :degree, '欲しい度' %>
-  <%= f.text_field :degree %>
-  <%= f.label :start_date, 'いつから欲しい？' %>
-  <%= f.text_field :start_date %>
-  <%= f.label :dinish_date, 'いつまでに欲しい？' %>
-  <%= f.text_field :finish_date %>
-  <%= f.label :price, '値段は？' %>
-  <%= f.text_field :price %>
-  <%= f.submit %>
-<% end %>
+<!-- https://tailwindcomponents.com/component/simple-sign-in -->
