--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,11 +1,39 @@
-<h1>一覧</h1>
-<% @items.each do |item| %>
-  <p>欲しいもの</p>
-  <span><%= item.name %></span>
-  <%= link_to edit_item_path(item) do %>
-    <i class="fas fa-pen"></i>
-  <% end %>
-  <%= link_to item_path(item), method: :delete, data: {confirm: "削除してもいいですか？"} do %>
-    <i class="fas fa-trash"></i>
-  <% end %>
-<% end %>
+<h1>欲しいものリスト一覧</h1>
+<section class="antialiased bg-gray-100 text-gray-600 h-screen px-4">
+  <div class="flex flex-col justify-center h-full">
+    <!-- Table -->
+    <div class="w-full max-w-2xl mx-auto bg-white shadow-lg rounded-sm border border-gray-200">
+      <header class="px-5 py-4 border-b border-gray-100">
+          <h2 class="font-semibold text-center text-gray-800">欲しいものリスト</h2>
+      </header>
+      <div class="p-3">
+        <div class="overflow-x-auto">
+          <table class="table-auto w-full">
+            <thead class="text-xs font-semibold uppercase text-gray-400 bg-gray-50">
+              <tr>
+                <th class="p-2 whitespace-nowrap">
+                    <div class="font-semibold text-left">欲しいもの</div>
+                </th>
+                <th class="p-2 whitespace-nowrap">
+                    <div class="font-semibold text-center">欲しい度</div>
+                </th>
+                <th class="p-2 whitespace-nowrap">
+                    <div class="font-semibold text-center">いつから欲しい？</div>
+                </th>
+                <th class="p-2 whitespace-nowrap">
+                    <div class="font-semibold text-center">いつまでに欲しい？</div>
+                </th>
+                <th class="p-2 whitespace-nowrap">
+                    <div class="font-semibold text-center">値段</div>
+                </th>
+              </tr>
+            </thead>
+            <tbody class="text-sm divide-y divide-gray-100">
+              <%= render @items %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
