--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,15 +1,15 @@
-<h1>欲しいものリスト一覧</h1>
-<section class="antialiased bg-gray-100 text-gray-600 h-screen px-4">
-  <div class="flex flex-col justify-center h-full">
+<section class="antialiased bg-yellow-50 text-gray-600 h-screen px-4">
+  <h1 class="flex justify-center py-3 text-xl lg:text-4xl font-semibold">欲しいものリスト一覧</h1>
+  <div class="flex flex-col justify-center h-4/6 lg:h-5/6">
     <!-- Table -->
-    <div class="w-full max-w-2xl mx-auto bg-white shadow-lg rounded-sm border border-gray-200">
+    <div class="w-5/6 mx-auto bg-white shadow-lg rounded-sm border border-gray-200">
       <header class="px-5 py-4 border-b border-gray-100">
           <h2 class="font-semibold text-center text-gray-800">欲しいものリスト</h2>
       </header>
       <div class="p-3">
         <div class="overflow-x-auto">
           <table class="table-auto w-full">
-            <thead class="text-xs font-semibold uppercase text-gray-400 bg-gray-50">
+            <thead class="text-xs lg:text-lg font-semibold uppercase text-gray-400 bg-gray-50">
               <tr>
                 <th class="p-2 whitespace-nowrap">
                     <div class="font-semibold text-left">欲しいもの</div>
@@ -28,7 +28,7 @@
                 </th>
               </tr>
             </thead>
-            <tbody class="text-sm divide-y divide-gray-100">
+            <tbody class="text-xs lg:text-lg divide-y divide-gray-100">
               <%= render @items %>
             </tbody>
           </table>
