--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -13,7 +13,7 @@
           </div>
           <div class="mb-6">
             <%= f.label :degree, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
-            <%= f.range_field :degree, class: "border w-full app border-gray-300 rounded-md focus:outline-none", min:"0", max:"100" %>
+            <%= f.range_field :degree, class: "border w-full app border-gray-300 rounded-md focus:outline-none", min: "0", max: "100", value: "10" %>
           </div>
           <div class="mb-6">
             <%= f.label :start_date, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
