--- a/app/views/three_items/new.html.erb
+++ b/app/views/three_items/new.html.erb
@@ -9,28 +9,28 @@
         <%= form.fields_for :items do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
           <div class="mb-6">
-            <%= f.label :name, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
+            <%= f.label :name, class: "mt-10 block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
             <%= f.text_field :name, placeholder: "商品名", class: "w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" %>
           </div>
           <div class="mb-6">
             <%= f.label :degree, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
-            <%= f.range_field :degree, class: "border w-full app border-gray-300 rounded-md focus:outline-none", min:"0", max:"100" %>
+            <%= f.range_field :degree, min:"0", max:"100" %>
           </div>
           <div class="mb-6">
             <%= f.label :start_date, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
-            <%= f.range_field :start_date, class: "border w-full app border-gray-300 rounded-md focus:outline-none", min:"0", max:"180" %>
+            <%= f.range_field :start_date, min:"0", max:"180" %>
           </div>
           <div class="mb-6">
             <%= f.label :finish_date, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
-            <%= f.range_field :finish_date, class: "border w-full app border-gray-300 rounded-md focus:outline-none", min:"0", max:"180" %>
+            <%= f.range_field :finish_date, min:"0", max:"180" %>
           </div>
           <div class="mb-6">
             <%= f.label :price, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
-            <%= f.range_field :price, class: "border w-full app border-gray-300 rounded-md focus:outline-none", min:"0", max:"20000" %>
+            <%= f.range_field :price, min:"0", max:"100000" %>
           </div>
           <% end %>
           <div class="mb-6">
-            <%= form.button :submit, class: "w-full px-3 py-4 text-white bg-indigo-500 rounded-md focus:bg-indigo-600 focus:outline-none" %>
+            <%= form.button :submit, class: "mt-8 w-full px-3 py-4 text-white bg-indigo-500 rounded-md focus:bg-indigo-600 focus:outline-none" %>
           </div>
         <% end %>
       </div>
