--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,13 +1,20 @@
-<footer class="text-gray-600 body-font">
-  <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
-    <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
-      <span class="ml-3 text-xl">HoshiMe</span>
-    </a>
-    <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2021 HoshiMe</p>
-    <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-      <%= link_to "利用規約", "#", class: 'text-gray-500' %>｜
-      <%= link_to "プライバシーポリシー", "#", class: 'text-gray-500' %>｜
-      <%= link_to "お問い合わせ", "#", class: 'text-gray-500' %>
-    </span>
+<footer>
+  <div class="bg-yellow-400 text-yellow-50 text-xs lg:text-md pt-2">
+    <div class="max-w-screen-lg px-4 sm:px-6 sm:grid md:grid-cols-3 sm:grid-cols-1 mx-auto">
+      <div class="p-0 lg:p-1 mx-7 lg:mx-10">
+        <%= link_to "利用規約", "#", class: "text-center" %>
+      </div>
+      <div class="p-0 lg:p-1 mx-7 lg:mx-10">
+        <%= link_to "プライバリシーポリシー", "#", class: "text-center" %>
+      </div>
+      <div class="p-0 lg:p-1 mx-7 lg:mx-10">
+        <%= link_to "お問い合わせ", "#", class: "text-center" %>
+      </div>
+    </div>
+    <div class="p-0 lg:p-1">
+      <div class="flex px-3 m-auto flex-col max-w-screen-lg items-center">
+        <div class="mb-1 lg:my-2">© Copyright 2022. All Rights Reserved.</div>
+      </div>
+    </div>
   </div>
 </footer>
