Fix: お問い合わせ等が中央に来るように修正

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,14 +1,14 @@
 <footer>
   <div class="bg-yellow-400 text-yellow-50 text-xs lg:text-md pt-2">
     <div class="max-w-screen-lg px-4 sm:px-6 sm:grid md:grid-cols-3 sm:grid-cols-1 mx-auto">
-      <div class="p-0 lg:p-1 mx-7 lg:mx-10">
-        <%= link_to "利用規約", "#", class: "text-center" %>
+      <div class="p-0 lg:p-1 mx-7 lg:mx-10 text-center">
+        <%= link_to "利用規約", "#" %>
       </div>
-      <div class="p-0 lg:p-1 mx-7 lg:mx-10">
-        <%= link_to "プライバリシーポリシー", "#", class: "text-center" %>
+      <div class="p-0 lg:p-1 mx-7 lg:mx-10 text-center">
+        <%= link_to "プライバリシーポリシー", "#" %>
       </div>
-      <div class="p-0 lg:p-1 mx-7 lg:mx-10">
-        <%= link_to "お問い合わせ", "#", class: "text-center" %>
+      <div class="p-0 lg:p-1 mx-7 lg:mx-10 text-center">
+        <%= link_to "お問い合わせ", "#" %>
       </div>
     </div>
     <div class="p-0 lg:p-1">
