--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -29,6 +29,7 @@
 $('#item_degree').jRange({
   from: 0,
   to: 100,
+  step: 10,
   format: '%s %',
   scale: [0,10, 20, 30, 40, 50, 60, 70, 80, 90, "100%"],
   width: '100%',
@@ -41,6 +42,7 @@ $('#item_degree').jRange({
 $('#item_start_date').jRange({
   from: 0,
   to: 360,
+  step: 10,
   scale: ["今日", 1,2, 3, 4, 5, 6, 7, 8, 9, 10, 11, "12ヶ月前"],
   width: '100%',
   theme: "theme-blue",
@@ -52,6 +54,7 @@ $('#item_start_date').jRange({
 $('#item_finish_date').jRange({
   from: 0,
   to: 360,
+  step: 10,
   scale: ["今日", 1,2, 3, 4, 5, 6, 7, 8, 9, 10, 11, "12ヶ月後"],
   width: '100%',
   theme: "theme-blue",
@@ -63,6 +66,7 @@ $('#item_finish_date').jRange({
 $('#item_price').jRange({
   from: 0,
   to: 100000,
+  step: 1000,
   format: '%s 万円',
   scale: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, "10万円"],
   width: '100%',
