--- a/app/views/three_items/new.html.erb
+++ b/app/views/three_items/new.html.erb
@@ -18,11 +18,11 @@
           </div>
           <div class="mb-6">
             <%= f.label :start_date, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
-            <%= f.range_field :start_date, min:"0", max:"180" %>
+            <%= f.range_field :start_date, min:"0", max:"360" %>
           </div>
           <div class="mb-6">
             <%= f.label :finish_date, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
-            <%= f.range_field :finish_date, min:"0", max:"180" %>
+            <%= f.range_field :finish_date, min:"0", max:"360" %>
           </div>
           <div class="mb-6">
             <%= f.label :price, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
@@ -43,6 +43,7 @@
 $('#form_item_collection_items_attributes_0_degree, #form_item_collection_items_attributes_1_degree, #form_item_collection_items_attributes_2_degree').jRange({
   from: 0,
   to: 100,
+  step: 10,
   format: '%s %',
   scale: [0,10, 20, 30, 40, 50, 60, 70, 80, 90, "100%"],
   width: '100%',
@@ -54,7 +55,8 @@ $('#form_item_collection_items_attributes_0_degree, #form_item_collection_items_
 });
 $('#form_item_collection_items_attributes_0_start_date, #form_item_collection_items_attributes_1_start_date, #form_item_collection_items_attributes_2_start_date').jRange({
   from: 0,
-  to: 180,
+  to: 360,
+  step: 10,
   scale: ["今日", 1,2, 3, 4, 5, 6, 7, 8, 9, 10, 11, "12ヶ月前"],
   width: '100%',
   theme: "theme-blue",
@@ -65,7 +67,8 @@ $('#form_item_collection_items_attributes_0_start_date, #form_item_collection_it
 });
 $('#form_item_collection_items_attributes_0_finish_date, #form_item_collection_items_attributes_1_finish_date, #form_item_collection_items_attributes_2_finish_date').jRange({
   from: 0,
-  to: 180,
+  to: 360,
+  step: 10,
   scale: ["今日", 1,2, 3, 4, 5, 6, 7, 8, 9, 10, 11, "12ヶ月後"],
   width: '100%',
   theme: "theme-blue",
@@ -77,6 +80,7 @@ $('#form_item_collection_items_attributes_0_finish_date, #form_item_collection_i
 $('#form_item_collection_items_attributes_0_price, #form_item_collection_items_attributes_1_price, #form_item_collection_items_attributes_2_price').jRange({
   from: 0,
   to: 100000,
+  step: 1000,
   format: '%s 万円',
   scale: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, "10万円"],
   width: '100%',
