--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,7 +1,7 @@
 <div class="flex justify-center">
   <div class="px-4">
-    <div class="text-5xl text-center">HoshiMe</div>
-    <p class="text-lg text-center">
+    <div class="text-gray-600 font-black text-5xl text-center py-4">HoshiMe</div>
+    <p class="text-gray-600 text-lg text-center underline">
     欲しいものを買う優先度をランキング形式で提示して<br>無駄遣いを減らすサービス
     </p>
     <div class="flex justify-end">
