--- a/app/views/shared/_flash_message.html.erb
+++ b/app/views/shared/_flash_message.html.erb
@@ -1,3 +1,5 @@
 <% flash.each do |message_type, message| %>
-  <div class="alert alert-<%= message_type %>"><%= message %></div>
+  <div class="p-4 mb-4 text-sm text-<%= message_type %>-700 bg-<%= message_type %>-100" role="alert">
+    <%= message %>
+  </div>
 <% end %>
