Fix: プロフィール編集ページのスタイリング

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,22 +1,24 @@
-<div class="flex items-center min-h-screen bg-white dark:bg-gray-900">
+<div class="flex items-center min-h-screen">
   <div class="container mx-auto">
-    <div class="max-w-md mx-auto my-10">
+    <div class="max-w-md mx-auto">
       <div class="text-center">
-        <h1 class="my-3 text-3xl font-semibold text-gray-700 dark:text-gray-200"><%= t('.title') %></h1>
+        <h1 class="text-3xl font-semibold text-gray-700 dark:text-gray-200">プロフィール編集</h1>
       </div>
       <div class="m-7">
         <%= form_with model: @user, url: profiles_path, local: true do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
-          <div class="mb-6">
+          <div class="mb-4">
             <%= f.label :name, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
-            <%= f.text_field :name, placeholder: "名前", class: "w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" %>
+            <%= f.text_field :name, class: "w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-yellow-100 focus:border-yellow-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" %>
+            <p class= "text-sm text-gray-400">例：ほしみん</p>
           </div>
-          <div class="mb-6">
+          <div class="mb-4">
             <%= f.label :email, class: "block mb-2 text-sm text-gray-600 dark:text-gray-400" %>
-            <%= f.email_field :email, placeholder: "メールアドレス", class: "w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" %>
+            <%= f.email_field :email, class: "w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-yellow-100 focus:border-yellow-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" %>
+            <p class= "text-sm text-gray-400">例：hoshime@example.com</p>
           </div>
           <div class="mb-6">
-            <%= f.button :submit, class: "w-full px-3 py-4 text-white bg-indigo-500 rounded-md focus:bg-indigo-600 focus:outline-none" %>
+            <%= f.submit class: "w-full p-2 lg:p-2 text-white text-lg lg:text-xl bg-yellow-500 rounded-md focus:bg-yellow-600 focus:outline-none" %>
           </div>
         <% end %>
       </div>
@@ -24,4 +26,3 @@
   </div>
 </div>
 
-<!-- https://tailwindcomponents.com/component/simple-sign-in -->
