Fix: 軽微な修正

--- a/app/javascript/src/calculation.scss
+++ b/app/javascript/src/calculation.scss
@@ -9,13 +9,13 @@
   z-index: 1;
 }
 
-.modal-bg {
-  position: absolute;
-  z-index: 50;
-  background-color: #ffffff;
-}
+// .modal-bg {
+//   position: absolute;
+//   z-index: 50;
+//   background-color: #ffffff;
+// }
 
-.calculation-show {
-  position: absolute;
-  top: 150px;
-}
+// .calculation-show {
+//   position: absolute;
+//   top: 150px;
+// }
