--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -21,7 +21,7 @@
     <%= f.range_field :price, min:"0", max:"100000" %>
   </div>
   <div class="mb-6">
-    <%= f.submit class: "mt-8 w-full px-3 py-2 text-white bg-yellow-500 rounded-md focus:bg-indigo-600 focus:outline-none" %>
+    <%= f.submit class: "mt-8 w-full px-3 py-2 text-white bg-yellow-500 rounded-md focus:bg-yellow-600 focus:outline-none" %>
   </div>
 <% end %>
 
