--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -3,9 +3,9 @@
     <nav class="bg-yellow-400 py-2">
       <div class="container px-4 mx-auto md:items-center">
         <div class="flex justify-between">
-          <%= link_to "Hoshime", root_path, class: "font-bold text-xl text-yellow-100" %>
-          <div class="pt-1">
-            <%= link_to (t 'defaults.login'), login_path, class: "text-sm text-yellow-100 text-center border border-transparent hover:bg-yellow-100 hover:text-yellow-700 transition-colors duration-300" %>
+          <%= link_to "Hoshime", root_path, class: "font-bold text-3xl text-yellow-100" %>
+          <div class="md:flex flex-col md:flex-row md:ml-auto mt-3 md:mt-0">
+            <%= link_to (t 'defaults.login'), login_path, class: "p-2 lg:px-4 md:mx-2 text-md text-yellow-100 text-center border border-transparent rounded hover:bg-yellow-100 hover:text-yellow-700 transition-colors duration-300" %>
           </div>
         </div>
       </div>
