--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,7 +4,7 @@
     <!-- Table -->
     <div class="w-11/12 lg:w-5/6 mx-auto bg-white shadow-lg rounded-sm border border-gray-200">
       <header class="px-5 py-4 border-b border-gray-100">
-          <h2 class="font-semibold text-center text-gray-800">欲しいものリスト</h2>
+          <h2 class="font-semibold text-center text-xl text-gray-500">欲しいものリスト</h2>
       </header>
       <div class="p-3 overflow-y-auto h-96">
         <div class="overflow-x-auto">
@@ -26,6 +26,8 @@
                 <th class="p-2 whitespace-nowrap">
                     <div class="font-semibold text-center">値段</div>
                 </th>
+                <th class="p-2 whitespace-nowrap"></th>
+                <th class="p-2 whitespace-nowrap"></th>
               </tr>
             </thead>
             <tbody class="text-xs lg:text-md divide-y divide-gray-100">
