--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,5 @@
 <div class="flex justify-center my-10">
-  <h1 class="text-3xl"><%= t('.title') %></h1>
+  <h1 class="text-xl lg:text-4xl text-gray-600 font-semibold"><%= t('.title') %></h1>
 </div>
 
 <div class="flex justify-center">
