--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,15 +3,15 @@
     <nav class="bg-yellow-400 py-2">
       <div class="container px-4 mx-auto md:flex md:items-center">
         <div class="flex justify-between items-center">
-          <%= link_to "Hoshime", root_path, class: "font-bold text-xl text-yellow-100" %>
+          <%= link_to "Hoshime", root_path, class: "pb-1 font-bold text-3xl text-yellow-100" %>
           <button class="border border-solid border-gray-100 px-3 py-1 rounded text-gray-100 opacity-50 hover:opacity-75 md:hidden" id="navbar-toggle">
             <i class="fas fa-bars"></i>
           </button>
         </div>
         <div class="hidden md:flex flex-col md:flex-row md:ml-auto mt-3 md:mt-0" id="navbar-collapse">
-          <%= link_to "欲しいものリスト", "#", class: "p-2 lg:px-4 md:mx-2 text-sm text-yellow-100 text-center border border-transparent rounded hover:bg-yellow-100 hover:text-yellow-700 transition-colors duration-300" %>
-          <%= link_to "マイページ", "#", class: "p-2 lg:px-4 md:mx-2 text-sm text-yellow-100 text-center border border-transparent rounded hover:bg-yellow-100 hover:text-yellow-700 transition-colors duration-300" %>
-          <%= link_to "ログアウト", logout_path, method: :delete, class: "p-2 lg:px-4 md:mx-2 text-sm text-yellow-100 text-center border border-transparent rounded hover:bg-yellow-100 hover:text-yellow-700 transition-colors duration-300" %>
+          <%= link_to "欲しいものリスト", items_path, class: "p-2 lg:px-4 md:mx-2 text-md text-yellow-100 text-center border border-transparent rounded hover:bg-yellow-100 hover:text-yellow-700 transition-colors duration-300" %>
+          <%= link_to "マイページ", profiles_path, class: "p-2 lg:px-4 md:mx-2 text-md text-yellow-100 text-center border border-transparent rounded hover:bg-yellow-100 hover:text-yellow-700 transition-colors duration-300" %>
+          <%= link_to "ログアウト", logout_path, method: :delete, class: "p-2 lg:px-4 md:mx-2 text-md text-yellow-100 text-center border border-transparent rounded hover:bg-yellow-100 hover:text-yellow-700 transition-colors duration-300" %>
         </div>
       </div>
     </nav>
