--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,5 +1,5 @@
 <div class="flex justify-center">
-  <div class="px-4">
+  <div class="px-4 2xl:pt-10">
     <div class="text-gray-600 font-black text-5xl text-center py-4">HoshiMe</div>
     <p class="text-gray-600 text-lg text-center underline">
     欲しいものを買う優先度をランキング形式で提示して<br>無駄遣いを減らすサービス
@@ -11,7 +11,7 @@
       <%= image_pack_tag "top_rank.png", size: "300x300" %>
     </div>
     <div class="flex justify-center">
-      <%= button_to "はじめる", guest_path, method: :post, class: "text-white bg-gradient-to-r from-yellow-300 via-yellow-400 to-yellow-500 hover:bg-gradient-to-br focus:ring-4 focus:ring-yellow-300 dark:focus:ring-yellow-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
+      <%= button_to "はじめる", guest_path, method: :post, class: "text-white bg-gradient-to-r from-yellow-300 via-yellow-400 to-yellow-500 hover:bg-gradient-to-br focus:ring-4 focus:ring-yellow-300 dark:focus:ring-yellow-800 font-medium rounded-lg text-md 2xl:text-lg px-5 2xl:px-10 px- py-2.5 text-center mr-2 mb-2 2xl:my-5" %>
     </div>
   </div>
 </div>
