--- a/app/views/calculations/index.html.erb
+++ b/app/views/calculations/index.html.erb
@@ -2,7 +2,7 @@
 <% if @calculations.present? %>
   <div id="modal-overlay"></div>
   <div id="modal-area"></div>
-  <div class="grid lg:grid-cols-2 grid-cols-1 pr-3">
+  <div class="grid grid-cols-1 lg:grid-cols-2 lg:pr-3">
     <section class="container mx-auto font-mono">
       <div class="w-full mb-8">
         <div class="w-full overflow-x-auto flex justify-center">
