--- a/app/views/calculations/_calculation.html.erb
+++ b/app/views/calculations/_calculation.html.erb
@@ -14,6 +14,6 @@
 <% end %>
   </td>
   <td class="py-4 px-6 text-gray-500 whitespace-nowrap dark:text-gray-400">
-    <%= link_to calculation.item.name, calculation_path(calculation), remote: :true %><br>
+    <%= link_to calculation.item.name, calculation_path(id: calculation, rank: calculation_counter + 1), remote: :true %><br>
   </td>
 </tr>
