--- a/app/views/calculations/show.js.erb
+++ b/app/views/calculations/show.js.erb
@@ -1,5 +1,5 @@
 // アイテム名をクリックすると'show'部分テンプレートがHTML要素に追加される
-$("#modal-area").html("<%= j(render 'show', calculation: @calculation) %>");
+$("#modal-area").html("<%= j(render 'show', {calculation: @calculation, rank: @rank}) %>");
 // 背景を暗くする
 $("div#modal-overlay").addClass('modal-background')
 // その要素を表示
