--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -19,8 +19,8 @@
 </header>
 
 <script>
-  let toggleBtn = document.querySelector("#navbar-toggle");
-  let collapse = document.querySelector("#navbar-collapse");
+  var toggleBtn = document.querySelector("#navbar-toggle");
+  var collapse = document.querySelector("#navbar-collapse");
 
   toggleBtn.onclick = () => {
     collapse.classList.toggle("hidden");
