--- a/app/views/calculations/_show.html.erb
+++ b/app/views/calculations/_show.html.erb
@@ -1,6 +1,6 @@
 <%= Gon::Base.render_data %>
 <div class="flex justify-center">
-  <div class='p-5 absolute top-1/4 z-50 bg-white w-2/3 shadow-lg rounded-lg overflow-hidden'>
+  <div class='p-5 absolute top-16 z-50 bg-white w-2/3 shadow-lg rounded-lg overflow-hidden'>
     <div class='radar-chart-area'>
       <canvas id='chartRadar'></canvas>
     </div>
@@ -15,7 +15,7 @@
         <p class="text-center text-sm lg:text-xl py-5">お金ないんだろ？<br>今買うんじゃないよwww</p>
       <% end %>
     </div>
-    <div class="pt-2 m-3 flex justify-center" id="modal-close">
+    <div class="pt-2 flex justify-center" id="modal-close">
       <button class="cursor-pointer bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-5 rounded">
         閉じる
       </button>
