Fix: 欲しいもの追加後のリダイレクト先を変更

--- a/app/views/calculations/index.html.erb
+++ b/app/views/calculations/index.html.erb
@@ -34,7 +34,9 @@
     </div>
   </div>
 <% else %>
-  <p>欲しいものが登録されていません。</p>
+  <div class="text-center">
+    <p class="text-lg">欲しいものが登録されていません。</p>
+  </div>
 <% end %>
 
 <div class="flex justify-center grid grid-col-1 py-5">
