add: twitterシェアの追加

--- a/app/views/calculations/index.html.erb
+++ b/app/views/calculations/index.html.erb
@@ -39,6 +39,12 @@
   </div>
 <% end %>
 
+<div class='twitter-button'>
+  <%= link_to "https://twitter.com/intent/tweet?url=https://hoshime.herokuapp.com&text=HoshiMeに欲しいモノを投稿しました。&hashtags=HoshiMe,欲しいモノ,ランキング,お金,無駄&lang=ja", title: 'Twitter', target: :_blank, rel: 'noopener noreferrer'  do %>
+    <span><i class="fab fa-twitter"></i>Twitterでシェアする</span>
+  <% end %>
+</div>
+
 <div class="flex justify-center grid grid-col-1 py-5">
   <p class="text-center text-md lg:text-xl">ユーザー登録すると今登録したアイテムを引き継いで使うことができます。</p>
   <div class="flex justify-center py-7">
