add: meta_tagsの設定ファイルを作成

--- a/app/views/calculations/_show.html.erb
+++ b/app/views/calculations/_show.html.erb
@@ -15,6 +15,11 @@
         <p class="text-center text-sm lg:text-xl py-5">お金ないんだろ？<br>今買うんじゃないよwww</p>
       <% end %>
     </div>
+    <div class='twitter-button'>
+      <%= link_to "https://twitter.com/intent/tweet?url=https://hoshime.herokuapp.com&text=HoshiMeに欲しいモノを投稿しました。&hashtags=HoshiMe,欲しいモノ,ランキング,お金,無駄&lang=ja", title: 'Twitter', target: :_blank, rel: 'noopener noreferrer'  do %>
+        <span><i class="fab fa-twitter"></i>Twitterでシェアする</span>
+      <% end %>
+    </div>
     <div class="pt-2 flex justify-center" id="modal-close">
       <button class="cursor-pointer bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-5 rounded">
         閉じる
