Fix: ページタイトル追加

--- a/app/views/calculations/index.html.erb
+++ b/app/views/calculations/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:title, t('.title')) %>
+
 <div class="flex justify-center py-7 lg:py-10 text-gray-600 text-2xl lg:text-4xl font-semibold"><i class="fas fa-crown text-yellow-300"></i>ランキング結果<i class="fas fa-crown text-yellow-300"></i></div>
 <% if @calculations.present? %>
   <div id="modal-overlay"></div>
