--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:title, t('.title')) %>
+
 <div class="flex items-center min-h-screen dark:bg-gray-900">
   <div class="container mx-auto">
     <div class="max-w-md mx-auto my-10">
@@ -10,5 +12,3 @@
     </div>
   </div>
 </div>
-
-<!-- https://tailwindcomponents.com/component/simple-sign-in -->
