--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:title, t('.title')) %>
+
 <div class="flex justify-center my-5 py-5">
   <h1 class="text-xl lg:text-4xl text-gray-600 font-semibold"><%= t('.title') %></h1>
 </div>
