--- a/app/views/calculations/show.html.erb
+++ b/app/views/calculations/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:title, t('.title')) %>
+
 <%= Gon::Base.render_data %>
 <div class="flex justify-center pt-4">
   <div class='absolute top-1/5 z-50 bg-white w-full shadow-lg rounded-lg overflow-hidden'>
