--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:title, t('.title')) %>
+
 <section class="antialiased bg-yellow-50 text-gray-600 h-screen">
   <h1 class="flex justify-center py-8 text-xl lg:text-4xl font-semibold">欲しいものリスト一覧</h1>
   <div class="flex flex-col justify-center">
