--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:title, t('.title')) %>
+
 <div class="flex items-center">
   <div class="container mx-auto">
     <div class="max-w-md mx-auto mt-6 2xl:mt-10">
