--- a/app/views/three_items/new.html.erb
+++ b/app/views/three_items/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:title, t('.title')) %>
+
 <div class="flex items-center min-h-screen dark:bg-gray-900">
   <div class="container mx-auto">
     <div class="mb-10">
