--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:title, t('.title')) %>
+
 <div class="flex items-center min-h-screen">
   <div class="container mx-auto">
     <div class="max-w-md mx-auto">
